<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/core_colors_platinum_white"
    tools:context=".fragments.FragmentAccount">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:maxLines="1"

        android:textSize="50sp"
        android:paddingHorizontal="15dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"

        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/accounts_current_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/guest"

        android:maxLines="1"
        android:paddingHorizontal="15dp"
        android:textColor="@color/core_colors_fire_orange"
        android:textSize="50sp"

        app:layout_constraintTop_toBottomOf="@+id/hello_text" />

    <TextView
        android:id="@+id/buttonLogOut"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:maxLines="1"
        android:elevation="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/log_out"

        android:textColor="@color/core_colors_platinum_white"
        android:background="@drawable/entry_shape"
        android:backgroundTint="@color/core_colors_bright_red"
        android:fontFamily="@font/montserrat"

        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>